--- a/apps/contacts/src/index.html
+++ b/apps/contacts/src/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <title>contacts</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://randomuser.me" />
+    <meta name="theme-color" content="#555" />
   </head>
   <body>
     <app-root></app-root>
