--- a/apps/contacts/src/index.html
+++ b/apps/contacts/src/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="icon" type="image/x-icon" href="book-user.svg" />
     <link rel="preconnect" href="https://randomuser.me" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1b0235" />
   </head>
   <body>
